--- a/style.css
+++ b/style.css
@@ -82,13 +82,66 @@ header nav p {
     height: 200px;
     border-radius: 24px 0 0 0;
 }
-
+/**tamanho do quadro das 3 imagens**/
 .pacotes .card{
     width: 250px;
-    height: 400px;
+    height: 425px;
     background: white;
     border-radius: 24px 0;
     margin: 25px;
     position: relative;
 }
 
+.pacotes .card-content {
+    padding: 0 15px;
+
+}
+
+.pacotes .card-content ul{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+}
+
+.pacotes .card-content ul li{
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    margin: 3px 0;
+    color: grey;
+    font-weight: bold;
+}
+
+/** espaço entre letras e emoji**/
+.pacotes .card-content li svg{
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+}
+
+.pacotes .card-content h1{
+    font-size: 1rem;
+}
+.pacotes .card .card-tag-top {
+    position: absolute;
+    right: 0;
+    top: 15px;
+    background: #f19b39;
+    border-radius: 8px 0 0 8px;
+    padding: 5px 10px;
+}
+.pacotes .card .card-tag-bottom {
+    position: absolute;
+    left: 0;
+    top: 160px;
+    background: #1d61dd;
+    border-radius: 8px 0 0 8px;
+    padding: 5px 10px;
+}
+
+.pacotes .card .card-tag p{
+    margin: 0;
+    font-size: 0,8rem;
+    color: white;
+    font-weight: bold;
+}
