adicionado tema para trabalho

--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ header nav p {
     left: 0;
     top: 160px;
     background: #1d61dd;
-    border-radius: 8px 0 0 8px;
+    border-bottom-right-radius: 8px 8px;
+    border-top-right-radius: 8px 8px;
     padding: 5px 10px;
 }
 
@@ -143,5 +144,86 @@ header nav p {
     margin: 0;
     font-size: 0,8rem;
     color: white;
+    font-weight: bold;
+}
+
+.servicos{
+    padding: 15px;
+}
+
+.servicos .servicos-title{
+    text-align: center;
+    margin: 35px 0;
+}
+
+.servicos .servicos-cards{
+    margin-top: 25px;
+    display: flex;
+    max-width: 950px;
+    justify-content: center;
+    margin: auto;
+
+}
+
+.servicos .card{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 20px;
+}
+
+.servicos .card svg{
+    width: 60px;
+    height: 60px;
+    margin: 50px;
+}
+
+.servicos .card svg:hover{
+    stroke: #1d61dd;
+    transform: scale(1.1);
+}
+
+.servicos .card h3{
+    font-weight: bold;
+}
+
+.servicos .card p{
+    color: grey;
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+.servicos .card .card-content{
+    height: 180px;
+    text-align: center;
+}
+
+.contatos{
+height: 50px;
+background: red;
+}
+.contatos-svg { 
+   margin: 10px; 
+   height: 10px;
+   
+}
+.contatos-svg .mail{
+    color: #70ef96;
+}
+
+.contatos-svg .facebook{
+    color: #1d61dd;
+}
+.contatos-svg .twitter{
+    color: gold;
+}
+
+.contatos-svg .smartphone{
+    color: purple;
+}
+
+.contatos h2 {
     font-weight: bold;
 }
